--- a/frontend/src/components/headers/ServicesHeader.module.scss
+++ b/frontend/src/components/headers/ServicesHeader.module.scss
@@ -6,7 +6,19 @@
 .main{
     width: 100vw;
     height: 100vh;
-    background-color: transparent;
+    // background-image: linear-gradient(to right, grey 1%, transparent 1%) ;
+
+    &::before{
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        // background-color:rgb(175, 170, 170);
+        height: 2%;
+    }
+    box-sizing: border-box;
 
     position: absolute;
     top: 0;
@@ -24,15 +36,27 @@
     .name{
         position: absolute;
         top: 60%;
-        left: 10%;
-        font-size: 25rem;
+        // left: 50%;
+        font-size: 20rem;
         font-weight: bold;
         // color: rgba(245, 222, 179, 0.346);
         font-family: test;
         z-index: 100;
         mix-blend-mode: difference;
-        color: rgba(97, 113, 138, 1);
+        color: rgb(175, 170, 170);
         animation: color-changer 2s linear 0 infinite forwards;
+    }
+
+    .content{
+        position: absolute;
+        width: 60vw;
+        word-spacing: .8rem;
+        line-height: 5rem;
+        // background-color: red;
+        font-size: 2rem;
+        left: 5vw;
+        top: 5vh;
+        color: white;
     }
 
 
