--- a/frontend/src/components/headers/designs/OilPaintings.module.scss
+++ b/frontend/src/components/headers/designs/OilPaintings.module.scss
@@ -34,7 +34,8 @@
     > .gallery{
         width: 100%;
         height: 70%;
-        // background-color: black;
+        // background-color: red;
+        mask: linear-gradient(to right, rgba(0,0,0, .1) , rgba(0,0,0, .9) 5%, rgba(0, 0, 0, 0.9) 95%, rgba(0,0,0, .1));
         display: flex;
         flex-wrap: nowrap;
         flex-direction: row;
@@ -50,6 +51,7 @@
             height: 100%;
             filter: grayscale(100%);
             opacity: 0.8;
+            // -webkit-box-reflect: below 3rem;
             -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
             mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
         }}
