--- a/frontend/src/components/headers/ServiceHeader.module.scss
+++ b/frontend/src/components/headers/ServiceHeader.module.scss
@@ -4,6 +4,7 @@
     position: relative;
     top: 0;
     left: 0;
+    // cursor: pointer;
     // box-shadow: 0 4px 20px rgba(53, 53, 53, 0.66);
 
 }
