--- a/frontend/src/components/headers/ServicesHeader.module.scss
+++ b/frontend/src/components/headers/ServicesHeader.module.scss
@@ -8,6 +8,21 @@
     height: 100vh;
     // background-image: linear-gradient(to right, grey 1%, transparent 1%) ;
 
+    > .home{
+        width: 100%;
+        height: 100%;
+        // background-color: red;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        // background-image: url('https://w.forfun.com/fetch/cf/cfca63349627b3011a93d400a8d563b7.jpeg');
+        filter: grayscale(100%);
+        opacity: 0.3;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
     &::before{
         content: '';
         display: block;
