--- a/frontend/src/components/Booking.module.scss
+++ b/frontend/src/components/Booking.module.scss
@@ -6,9 +6,13 @@
     top: 100vh;
     left: 0;
     z-index: 1000001;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     > .form{
-        width: 60%;
-        
+        width: 80vw;
+        height: 90vh;
+        background-color: green;
     }
 }
