add explore page

--- a/frontend/src/globals/globals.scss
+++ b/frontend/src/globals/globals.scss
@@ -1,4 +1,4 @@
 @font-face {
     font-family: bhargav;
-    src: url("../resources/fonts/JoeSandalmoe.otf");
+    src: url("../resources/fonts/JoeSandalmoe.otf") format("truetype");
 }
