--- a/frontend/src/pages/OilPaintings.module.scss
+++ b/frontend/src/pages/OilPaintings.module.scss
@@ -59,6 +59,7 @@
 
 
             > .description {
+                // background-color: red;
                 padding: 2rem;
                 text-align: start;
                 min-width: 10%;
