--- a/frontend/src/components/Booking.module.scss
+++ b/frontend/src/components/Booking.module.scss
@@ -1,18 +1,228 @@
 .main{
-    background-color: rgba(255, 0, 0, 0.773);
+    background-color: rgb(0, 0, 0);
     width: 100vw;
     height: 100vh;
-    position: absolute;
-    top: 100vh;
-    left: 0;
-    z-index: 1000001;
     display: flex;
     justify-content: center;
-    align-items: center;
+    flex-direction: row;
+
+    > .back{
+        color: gray;
+        height: 3rem;
+        aspect-ratio: 1/1;
+        margin-top: 3rem;
+        cursor: pointer;
+        > span{
+            font-size: 3rem;
+        }
+        transition: scale .3s;
+
+        &:hover{
+            scale: 1.5;
+        }
+    }
+
+    > .options{
+        gap: 8rem;
+        padding: 4rem;
+        width: 30%;
+        display: flex;
+        font-family: Lato;
+        font-weight:300;
+        text-transform: uppercase;
+        font-size: 4rem;
+        letter-spacing: 1.8rem;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        color: gray;
+
+        > div{
+            padding: 1rem 2rem;
+            box-sizing: border-box;
+            position: relative;
+            width: 100%;
+            cursor: pointer;
+            transition: all .3s;
+
+            &:hover{
+                color: white;
+                background-color: rgb(31, 31, 31);
+                scale: 1.1;
+            }
+
+            > .selected{
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                outline: gray solid 1px;
+                outline-offset: 6px;
+            }
+        }
+    }
+}
+
+.contact{
+    width: 60vw;
+    height: 100vh;
+    position: relative;
 
     > .form{
-        width: 80vw;
-        height: 90vh;
-        background-color: green;
+        // padding: 3rem !important;
+        position: absolute;
+        padding: 0 3rem;
+        box-sizing: border-box;
+        width: 100%;
+        top: 0;
+        height: 60%;
+        background-color: rgba(19, 19, 19, 0.86);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        > form{
+            display: flex;
+            justify-content: space-evenly;
+            gap: 2rem;
+            align-items: center;
+            flex-direction: row;
+            flex-wrap: wrap;
+
+
+
+            > button{
+                display: block;
+                border-radius: 50%;
+                width: 6rem;
+                aspect-ratio: 1/1;
+                background-color: rgba(39, 39, 39, 0.406);
+                color: gray;
+                outline: gray solid 1px;
+                outline-offset: 5px;
+                border: none;
+                cursor: pointer;
+                margin-top: 2rem;
+                transition: all .3s;
+
+                > span{
+                    font-size: 2rem;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 50%;
+                    width: 100%;
+                    aspect-ratio: 1/1;
+                }
+
+                &:hover{
+                    scale: 1.1;
+                    font-size: 2rem;
+                }
+            }
+            div{
+                // background-color: red;
+                display: flex;
+                flex-direction: column;
+                min-width: 40%;
+            >label{
+                margin-bottom: 1rem;
+                color: gray;
+                font-size: 1.5rem;
+                text-transform: capitalize;
+                font-family: 'Lato';
+                font-weight: 300;
+            }
+            > textarea{
+                min-width: 100%;
+                background-color: gray;
+                height: 15rem;
+                outline: none;
+                &:-webkit-autofill, 
+                &:-webkit-autofill:hover,
+                &:-webkit-autofill:focus,
+                &:-webkit-autofill:active{
+                    -webkit-box-shadow: none;
+                    transition: background-color 9999s ease-in-out 0s;
+                }
+            }
+            > input{
+                height: 4rem;
+                border: none;
+                font-size: 2rem;
+                // border-radius: 1rem;
+                padding: .5rem .7rem;
+                outline: none;
+                background-color: gray;
+                &:-webkit-autofill, 
+                &:-webkit-autofill:hover,
+                &:-webkit-autofill:focus,
+                &:-webkit-autofill:active{
+                    -webkit-box-shadow: none;
+                    transition: background-color 9999s ease-in-out 0s;
+                }
+            }
+            > select{
+                padding: 0 1rem 0;
+                font-size: 2rem;
+                outline: none;
+                border: none;
+                background-color: gray;
+                text-transform: capitalize;
+                font-family: 'Lato';
+                height: 5rem;
+
+                > option{
+                    text-transform: capitalize;
+                    
+                }
+            }
+
+        }
+    }
+    }
+
+
+    > .info{
+        top: 65%;
+        width: 100%;
+        position: absolute;
+        height: 30%;
+        // background-color: rgba(128, 128, 128, 0.09);
+        font-size: 2rem;
+
+        > h1{
+            width: 100%;
+            // background-color: red;
+            text-align: center;
+            font-family: 'Lato';
+            font-weight: 500;
+            font-size: 4rem;
+            letter-spacing: .1rem;
+            word-spacing: .5rem;
+            color: gray;
+        }
+
+        > div{
+            width: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            flex-direction: row;
+            > span{
+                color: grey;
+                font-size: 7rem;
+                font-weight:100;
+                padding: 2rem;
+                border-radius: 50%;
+                transition: all 1s;
+                border: 1px solid transparent;
+
+                &:hover{
+                    cursor: pointer;
+                    border: 1px solid gray;
+                }
+            }
+        }
     }
 }
