--- a/frontend/src/components/headers/HeaderNavigation.module.scss
+++ b/frontend/src/components/headers/HeaderNavigation.module.scss
@@ -3,7 +3,7 @@
     height: 60%;
     position: absolute;
     top: 0;
-    left: 0;
+    left: 1rem;
     z-index: 1000000;
     display: flex;
     flex-direction: column;
