--- a/frontend/src/pages/ExplorePage.module.scss
+++ b/frontend/src/pages/ExplorePage.module.scss
@@ -9,6 +9,13 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 0%;
+
+    > div{
+        width: 100%;
+        height: 100%;
+        position: relative;
+        font-size: 2rem;
+    }
 }
 
 @keyframes scaler {
