--- a/frontend/src/components/ExploreOption.module.scss
+++ b/frontend/src/components/ExploreOption.module.scss
@@ -1,16 +1,40 @@
 .main{
-    width: 40vw;
+    width: 50vw;
     height: 40vh;
     position: absolute;
     z-index: inherit;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
+    cursor: pointer;
+    transition: scale .5s;
+
+    &:hover{
+        offset: 1rem solid white;
+        scale: 1.1;
+        z-index: 657658954874674;
+    }
 
     > img{
-        width: 100%;
+        width: 95%;
         overflow: hidden;
         height: 100%;
         object-fit: cover;
         object-position: center;
         filter: grayscale(100%);
+    }
+
+    > div{
+        color: white;
+        text-transform: lowercase;
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
+        padding: 0rem 1rem;
+        width: 5%;
+        font-size: 4rem;
+        font-weight: 100;
+        font-family: test;
     }
     // background-image: url("../resources/artcentreimages/tattoo.jpeg") !important;
 }
