--- a/frontend/src/components/headers/ServiceHeader.module.scss
+++ b/frontend/src/components/headers/ServiceHeader.module.scss
@@ -2,10 +2,7 @@
     width: 7vw;
     height: 100vh;
     position: relative;
-    top: 0;
-    left: 0;
-    // cursor: pointer;
-    // box-shadow: 0 4px 20px rgba(53, 53, 53, 0.66);
-
+    cursor: pointer;
+    z-index: 1;
 }
 
