--- a/frontend/src/components/BackButton.module.scss
+++ b/frontend/src/components/BackButton.module.scss
@@ -1,11 +1,21 @@
 .main{
-    position: absolute;
-    width: 5rem;
-    margin: auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     aspect-ratio: 1/1;
     z-index: 18267894823126973619;
+    border-radius: 50%;
+    transition: all .3s;
+
+    color: gray;
 
     > span {
         font-size: 5rem;
+    }
+
+    &:hover{
+        background-color: rgb(42, 42, 42);
+        color: white;
     }
 }
