--- a/frontend/src/components/Booking.module.scss
+++ b/frontend/src/components/Booking.module.scss
@@ -7,19 +7,10 @@
     flex-direction: row;
 
     > .back{
-        color: gray;
-        height: 3rem;
+        padding: 2rem 0 0 1rem;
+        height: 6rem;
         aspect-ratio: 1/1;
-        margin-top: 3rem;
         cursor: pointer;
-        > span{
-            font-size: 3rem;
-        }
-        transition: scale .3s;
-
-        &:hover{
-            scale: 1.5;
-        }
     }
 
     > .options{
@@ -81,47 +72,41 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
         > form{
             display: flex;
-            justify-content: space-evenly;
             gap: 2rem;
+            justify-content: space-evenly;
             align-items: center;
             flex-direction: row;
             flex-wrap: wrap;
 
-
-
-            > button{
+            > .button{
                 display: block;
-                border-radius: 50%;
-                width: 6rem;
-                aspect-ratio: 1/1;
-                background-color: rgba(39, 39, 39, 0.406);
-                color: gray;
-                outline: gray solid 1px;
-                outline-offset: 5px;
-                border: none;
-                cursor: pointer;
-                margin-top: 2rem;
-                transition: all .3s;
+                width: 100%;
+                height: 6rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
 
-                > span{
-                    font-size: 2rem;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    border-radius: 50%;
-                    width: 100%;
-                    aspect-ratio: 1/1;
+                > button{
+                    height: 80%;
+                    font-size: 3rem;
+                    color: gray;
+                    background-color: transparent;
+                    border: none;
+                    cursor: pointer;
+                    transition: all .3s;
+
+                    &:hover{
+                        transform: scale(1.2);
+                    }
                 }
 
-                &:hover{
-                    scale: 1.1;
-                    font-size: 2rem;
-                }
+
             }
+
             div{
-                // background-color: red;
                 display: flex;
                 flex-direction: column;
                 min-width: 40%;
@@ -134,9 +119,9 @@
                 font-weight: 300;
             }
             > textarea{
-                min-width: 100%;
+                min-width: 100% !important;
                 background-color: gray;
-                height: 15rem;
+                height: 10rem;
                 outline: none;
                 &:-webkit-autofill, 
                 &:-webkit-autofill:hover,
@@ -149,6 +134,7 @@
             > input{
                 height: 4rem;
                 border: none;
+                border-radius: 10px;
                 font-size: 2rem;
                 // border-radius: 1rem;
                 padding: .5rem .7rem;
