--- a/frontend/src/pages/Home.module.scss
+++ b/frontend/src/pages/Home.module.scss
@@ -4,16 +4,11 @@
     position: relative;
     width: 100vw;
 
-    >.circle2{
-        z-index: -1;
-        aspect-ratio: 1/1;
+    >.aboutus{
         position: absolute;
-        border-radius: 50%;
-        top: 55%;
-        left: 75%;
-        width: 25%;
-        border-radius: 100% 0 0% 0;
-        background-color: rgb(15, 15, 15);
+        width: 100%;
+        height: 6rem;
+        top: calc(100% - 6rem);
     }
 
     > .explore{
