--- a/frontend/src/pages/OilPaintings.module.scss
+++ b/frontend/src/pages/OilPaintings.module.scss
@@ -17,29 +17,9 @@
 
     > .more{
         position: absolute;
-        top: 90%;
-        // background-color: red;
+        top: calc(100% - 6rem);
+        height: 6rem;
         width: 100%;
-        text-align: end;
-        
-
-        > button{
-            cursor: pointer;
-            font-family: Lato;
-            font-size: 2.2rem;
-            padding: 1rem 3rem 3rem 1rem;
-            text-transform: uppercase;
-            letter-spacing: 1.3rem;
-            color: white;
-            background-color: black;
-            border: none;
-            transition: all 0.5s;
-
-            &:hover{
-                letter-spacing: .8rem;
-                color: gray;
-            }
-        }
     }
 
     > .popular{
